# special case begin
add_subdirectory(qknxadditionalinfo)
add_subdirectory(qknxaddress)
add_subdirectory(qknxbytearray)
add_subdirectory(qknxcontrolfield)
add_subdirectory(qknxcryptographicengine)
add_subdirectory(qknxdatapointtype)
add_subdirectory(qknxdevicemanagementframe)
add_subdirectory(qknxgroupaddressinfo)
add_subdirectory(qknxnetipconfigdib)
add_subdirectory(qknxnetipconnectionheader)
add_subdirectory(qknxnetipconnectionstaterequest)
add_subdirectory(qknxnetipconnectionstateresponse)
add_subdirectory(qknxnetipconnectrequest)
add_subdirectory(qknxnetipconnectresponse)
add_subdirectory(qknxnetipcrd)
add_subdirectory(qknxnetipcri)
add_subdirectory(qknxnetipcurrentconfigdib)
add_subdirectory(qknxnetipdescriptionrequest)
add_subdirectory(qknxnetipdescriptionresponse)
add_subdirectory(qknxnetipdeviceconfigurationacknowledge)
add_subdirectory(qknxnetipdeviceconfigurationrequest)
add_subdirectory(qknxnetipdevicedib)
add_subdirectory(qknxnetipdisconnectrequest)
add_subdirectory(qknxnetipdisconnectresponse)
add_subdirectory(qknxnetipextendeddevicedib)
add_subdirectory(qknxnetiphpai)
add_subdirectory(qknxnetipknxaddressesdib)
add_subdirectory(qknxnetipmanufacturerdib)
add_subdirectory(qknxnetiprouter)
add_subdirectory(qknxnetiproutingbusy)
add_subdirectory(qknxnetiproutingindication)
add_subdirectory(qknxnetiproutinglostmessage)
add_subdirectory(qknxnetiproutingsystembroadcast)
add_subdirectory(qknxnetipsearchrequest)
add_subdirectory(qknxnetipsearchresponse)
add_subdirectory(qknxnetipsecuredservicefamiliesdib)
add_subdirectory(qknxnetipservicefamiliesdib)
add_subdirectory(qknxnetipsessionrequest)
add_subdirectory(qknxnetipsessionresponse)
add_subdirectory(qknxnetipstructure)
add_subdirectory(qknxnetiptunnelingacknowledge)
add_subdirectory(qknxnetiptunnelingfeature)
add_subdirectory(qknxnetiptunnelinginfodib)
add_subdirectory(qknxnetiptunnelingrequest)
add_subdirectory(qknxproject)
add_subdirectory(qknxtpdufactory)
add_subdirectory(qknxtunnelframe)
add_subdirectory(qknxtunnelframefactory)
# special case end
